--- a/PROYECTOJS1/estilos2.css
+++ b/PROYECTOJS1/estilos2.css
@@ -1,10 +1,9 @@
 h1 {
-    font-size: 4em;
-    margin-block-start: 1em;
-    margin-block-end: 2em;
-    margin-inline-start: 100px;
-    margin-inline-end:100px;
+    color: blue;
+    font-size: 6em;
     text-align: center;
+    margin-top: 1em;
+    margin-bottom: auto;
 }
 
 .input{
@@ -43,7 +42,7 @@ h1 {
 }
 
 .card-body {
-    flex: 1 1 auto;
+
     padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
     color: var(--bs-card-color);
 }
@@ -78,20 +77,9 @@ h1 {
 }
 
 body {
-    margin-left: 20px;
-    font-family: var(--bs-body-font-family);
-    font-size: var(--bs-body-font-size);
-    font-weight: var(--bs-body-font-weight);
-    line-height: var(--bs-body-line-height);
-    color: var(--bs-body-color);
-    text-align: var(--bs-body-text-align);
-    
-    
-
-   
-
-    /* -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent; */
+    margin-top: -6em;
+    margin-bottom: 9em;
+    background-image: img("C:\Users\herna\Desktop\ProyectoJS\ZonaGamer\fondo1.jpg");
 }
 
 #row {
@@ -112,22 +100,23 @@ body {
     --bs-gutter-y: 1.5rem;
 }
 
-/* .row-cols-md-3 {
+.row-cols-md-3 {
     flex: 0 0 auto;
     width: 33.3333333333%;
-} */
+}
 
-#col {
+.col {
     flex: 1 0 0%;
 }
 
 #titulo{
     
     background-image: url(C:/Users/herna/Desktop/ProyectoJS/ZonaGamer/fondo1.jpg);
-    height: 4em;
+    height: 2em;
     margin-left: -11px;
-    margin-right: 1px;
-    margin-top: -10px;
+    margin-right: -7px;
+    background-size: cover;
+    background-position: center;
 }
 
 .buttonfiltros{
@@ -140,10 +129,18 @@ body {
 }
 
 button{  
-    border-bottom-left-radius: 1em;
-    border-bottom-right-radius: 1em;
-    border-top-left-radius: 1em;
-    border-top-right-radius: 1em;
+
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    FONT-SIZE: 15px;
+    padding: 6px;
+    width: 326px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
 }
 
 button:hover{
@@ -152,6 +149,22 @@ button:hover{
 
 .Filtros{
     margin-bottom: 3em;
-    margin-top: -7em;
+    margin-top: 5em;
+    text-align: center;
+}
+
+
+.img1{
+    background-image: url(C:/Users/herna/Desktop/ProyectoJS/ZonaGamer/fondo1.jpg);
+    height: 5em;
+    margin-left: -11px;
+    margin-right: 1px;
+    margin-top: -10px;
+    object-fit: cover;
+    width: 19em;
+    background-repeat: no-repeat;
+    background-size: cover;
+    object-fit: scale-down;
+    background-position: center;
 }
 
